Fixed align-content on flex page, minor spelling mistakes

--- a/meshwebsite/css/main.css
+++ b/meshwebsite/css/main.css
@@ -30,7 +30,6 @@ html {
 
 main {
   position: relative;
-  overflow-x: hidden;
 }
 
 .hash {
