--- a/meshwebsite/scss/base/_global.scss
+++ b/meshwebsite/scss/base/_global.scss
@@ -16,7 +16,7 @@ html {
 }
 main {
 	position: relative;
-	overflow-x: hidden;
+	//overflow-x: hidden;
 }
 
 //! Come back to, conflicts with lists
